--- a/docker/Views/app/control.cshtml
+++ b/docker/Views/app/control.cshtml
@@ -34,6 +34,20 @@
         <div class="bottom">退费管理</div>
     </el-card>
 
+    <div class="wln-subtitle">问卷调查管理</div>
+    <el-card class="card" :body-style="{padding:'0px'}" onclick="location.href = 'questionary'">
+        <img class="image" src="/icons/grade.svg">
+        <div class="bottom">问卷管理</div>
+    </el-card>
+    <el-card class="card" :body-style="{padding:'0px'}" onclick="location.href = 'classes'">
+        <img class="image" src="/icons/classes.svg">
+        <div class="bottom">调查管理</div>
+    </el-card>
+    <el-card class="card" :body-style="{padding:'0px'}" onclick="location.href = 'staff'">
+        <img class="image" src="/icons/staff.svg">
+        <div class="bottom">结果统计</div>
+    </el-card>
+
     <div class="wln-subtitle">全校信息管理</div>
     <el-card class="card all" :body-style="{padding:'0px'}" onclick="location.href = 'term'">
         <img class="image" src="/icons/term.svg">
