--- a/docker/Views/charge/feechart.cshtml
+++ b/docker/Views/charge/feechart.cshtml
@@ -27,9 +27,9 @@
         <div class="bottom">收款汇总表</div>
     </el-card>
     @*<el-card class="card" :body-style="{padding:'0px'}" onclick="app.openTable('skmxb')">
-        <img class="image" src="/icons/mingxi.svg">
-        <div class="bottom">收款明细表</div>
-    </el-card>*@
+            <img class="image" src="/icons/mingxi.svg">
+            <div class="bottom">收款明细表</div>
+        </el-card>*@
     <el-card class="card" :body-style="{padding:'0px'}" onclick="app.openTable('stkmx')">
         <img class="image" src="/icons/stkmx.svg">
         <div class="bottom">收退款明细表</div>
@@ -39,12 +39,16 @@
         <div class="bottom">欠费明细表</div>
     </el-card>
     @*<el-card class="card" :body-style="{padding:'0px'}" onclick="app.openTable('yjfbb')">
-        <img class="image" src="/icons/chart-yjmx.svg">
-        <div class="bottom">预缴费报表</div>
-    </el-card>*@
+            <img class="image" src="/icons/chart-yjmx.svg">
+            <div class="bottom">预缴费报表</div>
+        </el-card>*@
     <el-card class="card" :body-style="{padding:'0px'}" onclick="app.openTable('tfmxb')">
         <img class="image" src="/icons/refund.svg">
         <div class="bottom">退费明细表</div>
+    </el-card>
+    <el-card class="card" :body-style="{padding:'0px'}" onclick="app.openTable('yskdk')">
+        <img class="image" src="/icons/mingxi.svg">
+        <div class="bottom">预收款抵扣报表</div>
     </el-card>
     @*<el-card class="card" :body-style="{padding:'0px'}" onclick="app.openDoing('qfmxb')">
             <img class="image" src="/icons/mingxi.svg">
