--- a/docker/Views/app/control.cshtml
+++ b/docker/Views/app/control.cshtml
@@ -39,7 +39,7 @@
         <img class="image" src="/icons/grade.svg">
         <div class="bottom">问卷管理</div>
     </el-card>
-    <el-card class="card" :body-style="{padding:'0px'}" onclick="location.href = 'classes'">
+    <el-card class="card" :body-style="{padding:'0px'}" onclick="location.href = 'surveys'">
         <img class="image" src="/icons/classes.svg">
         <div class="bottom">调查管理</div>
     </el-card>
