--- a/docker/Views/survey/wx/survey.cshtml
+++ b/docker/Views/survey/wx/survey.cshtml
@@ -265,7 +265,7 @@
                             <label for="q9_5">更倾向于互联网金融产品</label>
                         </li>
                     </ul>
-                    <div class="card_bottom"><a class="prev">上一题</a><span><b>9</b>/9</span></div>
+                    <div class="card_bottom"><a class="prev">上一题</a><span><button>Test</button></span></div>
                 </div>
             </div>
         </div><!--/card_wrap-->
