--- a/docker/wwwroot/wx/survey.css
+++ b/docker/wwwroot/wx/survey.css
@@ -1,4 +1,5 @@
-﻿body{line-height:1;color:#333;width:100%;margin:0 auto;-webkit-text-size-adjust:none;overflow-x:hidden}p,ol,ul,li{list-style:none}a,span{line-height:1;color:#333;text-decoration:none}button{outline:0}label{font-weight:normal}img{width:100%;display:block}a img{word-break:break-all;word-wrap:break-word}a:hover,a:focus{text-decoration:none}:focus{outline:0}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-text-size-adjust:none}
+﻿body{line-height:1;color:#333;width:100%;margin:0 auto;-webkit-text-size-adjust:none;overflow-x:hidden;background-color:#8eb2c3}
+p,ol,ul,li{list-style:none}a,span{line-height:1;color:#333;text-decoration:none}button{outline:0}label{font-weight:normal}img{width:100%;display:block}a img{word-break:break-all;word-wrap:break-word}a:hover,a:focus{text-decoration:none}:focus{outline:0}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-text-size-adjust:none}
 html,body{padding:0; margin:0 auto; height:100%; font-size:15px;}
 *{-webkit-appearance:none; margin:0; padding:0}
 a, span{color:inherit ; line-height:inherit; text-decoration:none}
@@ -11,8 +12,8 @@ input{outline:none;}
  * @date    2016-9-27 15:30:18
  * @version v1.0.8
  */
-.wrapper{width:400px; margin:0 auto;}
-.card_wrap{width:400px; height:584px; position:relative; overflow:hidden; display:none}
+.wrapper{width:92%; margin:0 auto;}
+.card_wrap{width:100%; height:560px; position:relative; overflow:hidden; display:none}
 .card_cont{width:100%; height:530px; box-sizing:border-box; margin:0 auto; position:absolute;  background:url(survey_bg.png) no-repeat center top; background-size:100% auto; padding:8px 20px 18px; transition:all ease .5s; -webkit-transition:all ease .5s; -moz-transition:all ease .5s; -ms-transition:all ease .5s; transform:scale(0,0); -moz-transform:scale(0,0);-ms-transform:scale(0,0); -o-transform:scale(0,0); -webkit-transform:scale(0,0); bottom:0; display:none;}
 .card{width:320px; height:100%; position:relative; margin:0 auto; padding:0 18px; }
 .card .card_bottom{width:100%; position:absolute; bottom:28px; left:0; box-sizing:border-box; padding:0 28px}
