--- a/docker/Views/school/student.cshtml
+++ b/docker/Views/school/student.cshtml
@@ -134,6 +134,8 @@
                             <el-tooltip content="上锁后将禁止编辑和删除学员资料" placement="bottom">
                                 <el-button size="mini" icon="el-icon-time" @@click="handleLocked(scope.row)" type="warning" v-if="verify" :disabled="scope.row.islock>0">{{scope.row.islock>0?'已锁':'上锁'}}</el-button>
                             </el-tooltip>
+                            <el-button size="mini" icon="el-icon-time" @@click="handleOut(scope.row)" type="warning" v-if="scope.row.state == 1">转出</el-button>
+                            <el-button size="mini" icon="el-icon-time" @@click="handleEnd(scope.row)" type="warning" v-if="scope.row.state == 1">毕业</el-button>
                             <el-tooltip content="直接删除学员信息（谨慎操作）" placement="bottom">
                                 <el-button size="mini" icon="el-icon-delete" @@click="handleDelete(scope.row)" type="danger" v-if="delrow" :disabled="scope.row.islock>0">删除</el-button>
                             </el-tooltip>
@@ -396,6 +398,36 @@
                     });
                 }).catch(() => {
                     iTips('锁定操作已取消');
+                });
+            },
+            handleOut(row) {
+                this.$confirm('学员转出后重新入学即可恢复, 是否继续?', '提示', {
+                    confirmButtonText: '确定',
+                    cancelButtonText: '取消',
+                    type: 'warning'
+                }).then(() => {
+                    var _self = this;
+                    $.getJSON(location.pathname, { 'do': 'out', id: row.id }, function (rlt) {
+                        _self.refresh();
+                        iTips(rlt.message, rlt.success);
+                    });
+                }).catch(() => {
+                    iTips('操作已取消');
+                });
+            },
+            handleEnd(row) {
+                this.$confirm('学员毕业后将锁定操作, 是否继续?', '提示', {
+                    confirmButtonText: '确定',
+                    cancelButtonText: '取消',
+                    type: 'warning'
+                }).then(() => {
+                    var _self = this;
+                    $.getJSON(location.pathname, { 'do': 'end', id: row.id }, function (rlt) {
+                        _self.refresh();
+                        iTips(rlt.message, rlt.success);
+                    });
+                }).catch(() => {
+                    iTips('操作已取消');
                 });
             }
         }, created() {
