--- a/docker/Views/survey/question.cshtml
+++ b/docker/Views/survey/question.cshtml
@@ -127,7 +127,8 @@
                     questionary: _questionary
                 }
                 , categories: _categories
-                , types: [{ "value": 0, "label": "打分" }, { "value": 1, "label": "单选" }, { "value": 2, "label": "多选" }, { "value": 3, "label": "填写" }]
+                , types2: [{ "value": 0, "label": "单选" }, { "value": 2, "label": "填写" }]
+                , types: [{ "value": 0, "label": "单选" }, { "value": 1, "label": "多选" }, { "value": 3, "label": "填写" }]
             };
         },
         methods: {
