--- a/docker/wwwroot/wx/survey.css
+++ b/docker/wwwroot/wx/survey.css
@@ -19,7 +19,28 @@ input{outline:none;}
 .card .card_bottom{width:100%; position:absolute; bottom:28px; left:0; box-sizing:border-box; padding:0 28px}
 .card .card_bottom a{color:#c733c5; cursor:pointer }
 .card .card_bottom span{float:right; color:#909090}.card .card_bottom span b{color:#666; font-weight:inherit}
-
+.card .card_input {
+    width: 270px;
+    height: 290px;
+    overflow: hidden;
+    padding: 0px 0 29px;
+    margin: 10px auto 10px 0px;
+}
+.card .card_input textarea{
+    width: 270px;
+    height: 290px;
+    line-height: 30px;
+    margin: -1px auto;
+    padding: 0px 6px;
+    background: -webkit-gradient( linear, left top, left bottom, from(#81cbbc), color-stop(3%, rgba(244, 243, 158, 0.1)) );
+    background: repeating-linear-gradient( top, rgba(244, 243, 158, 0.1), rgba(244, 243, 158, 0.1) 29px, #81cbbc 30px );
+    background-size: 100% 30px;
+}
+.card .card_next {
+    text-align: center;
+    padding-top: 10px;
+    margin-left: -6px;
+}
 .card_cont.card1{ display:block;transform:scale(1,1) translate(0,0) !important ;  
 -ms-transform:scale(1,1) translate(0,0) !important ; 
 -moz-transform:scale(1,1) translate(0,0) !important ; 
@@ -43,13 +64,26 @@ transform:translate(0,-1000px) !important;
 -ms-transform:translate(0,-1000px) !important;
 -webkit-transform:translate(0,-1000px) !important;}
 
-.question{display:table-cell; height:80px; font-size:16px; font-weight:100; color:#fff; line-height:1.4; vertical-align:middle; padding-left:1em}
+.question{display:table-cell; height:70px; font-size:15px; font-weight:100; color:#fff; line-height:1.4; vertical-align:middle; padding-left:0.2em}
 .question span{margin-left:-1em}
 
+ul.select, ul.checkbox{margin-top:18px}
+ul.select li, ul.checkbox li{min-height:36px;line-height:1.5;margin:0 0 10px 0;}
+.next, .submit {
+    outline: 0;
+    color: #fff;
+    transition: .1s;
+    padding: 3px 20px;
+    margin-top: -11px;
+    border-radius: 4px;
+    border-color: #9C27B0;
+    background-color: #8f62a7;
+}
+
 /*Radio Specific styles*/
-input[type='radio']{ display: none;cursor: pointer;}
-input[type='radio']:focus, input[type='radio']:active{outline: none;}
-input[type='radio'] + label {
+input[type='radio'],input[type='checkbox']{ display: none;cursor: pointer;}
+input[type='radio']:focus, input[type='radio']:active, input[type='checkbox']:focus, input[type='checkbox']:active{outline: none;}
+input[type='radio'] + label, input[type='checkbox'] + label{
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -57,8 +91,8 @@ input[type='radio'] + label {
   color: #666;
 
 }
-input[type='radio']:checked + label {color: #c733c5 !important;}
-input[type='radio'] + label:before, input[type='radio'] + label:after{
+input[type='radio']:checked + label, input[type='checkbox']:checked + label {color: #c733c5 !important;}
+input[type='radio'] + label:before, input[type='radio'] + label:after, input[type='checkbox'] + label:before, input[type='checkbox'] + label:after{
   content: '';
   font-family: helvetica;
   display: inline-block;
@@ -69,29 +103,22 @@ input[type='radio'] + label:before, input[type='radio'] + label:after{
   text-align: center;
   position: absolute;
 }
-input[type='radio'] + label:before {background-color:transparent;}
-input[type='radio'] + label:after {color: #c733c5;}
-input[type='radio']:checked + label:before {
+input[type='radio'] + label:before, input[type='checkbox'] + label:before {background-color:transparent;}
+input[type='radio'] + label:after, input[type='checkbox'] + label:after {color: #c733c5;}
+input[type='radio']:checked + label:before, input[type='checkbox']:checked + label:before {
   -moz-box-shadow: inset 0 0 0 5px #fff;
   -webkit-box-shadow: inset 0 0 5px #fff;
   box-shadow: inset 0 0 0 5px #fff; 
   border:1px solid #c733c5;
   background-color:#c733c5;
 }
-
-input[type='radio'] + label:before {
+input[type='radio'] + label:before, input[type='checkbox'] + label:before {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   border:1px solid #c733c5;
 }
-
-input[type='radio'] + label:hover:after {color: #c733c5;}
-input[type='radio']:checked + label:after, input[type='radio']:checked + label:hover:after {color: #c733c5;}
-ul.select{margin-top:30px}
-ul.select li{height:46px; line-height:1.5; margin:0 0 20px 0}
-
-
-
+input[type='radio'] + label:hover:after, input[type='checkbox'] + label:hover:after {color: #c733c5;}
+input[type='radio']:checked + label:after, input[type='radio']:checked + label:hover:after, input[type='checkbox']:checked + label:after, input[type='checkbox']:checked + label:hover:after {color: #c733c5;}
 
 
